--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <button id="addBtn">Add new item</button>
             <input id="inputTask" placeholder="What will we do today?">
         </div>
-        <div class="listTasks">
-            <ul></ul>
+        <div class="listBox">
+            <ul class="listTasks"></ul>
         </div>
     </div>
 </body>
