Modal box added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div>
             <button id="addBtn">Add new item</button>
             <input id="inputTask" placeholder="What will we do today?">
+            <div class="modal">
+            <p class="modalText">Hey, You need to write something :)</p>
+            </div>
         </div>
         <div class="listBox">
             <ul class="listTasks"></ul>
