Delete all tasks button added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <h2>What do you want to do today?</h2>
         </header>
         <div>
-            <button id="addBtn">Add new item</button>
+            <button id="addBtn">Add new task</button>
+            <button id="deleteTasksBtn">Delete all tasks</button>
             <input id="inputTask" placeholder="What will we do today?">
             <div class="modal">
             <p class="modalText">Hey, You need to write something :)</p>
