--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="listBox">
             <ul class="listTasks"></ul>
         </div>
+            <button id="saveListBtn">Save the list</button>  
     </div>
 </body>
 </html>
